# ratemate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  fly.toml  wrangler.jsonc
migrations/: 0001_create_users.sql  0002_create_reviews.sql
src/: main.rs
static/: index.html
